@@ -11,7 +11,7 @@ from PyQt5 import QtCore, QtGui, QtWidgets
 
 
 class Ui_numpadWindow(object):
-    def setupUi(self, numpadWindow, gui_path=''):
+    def setupUi(self, numpadWindow):
         numpadWindow.setObjectName("numpadWindow")
         numpadWindow.resize(246, 298)
         numpadWindow.setMinimumSize(QtCore.QSize(0, 0))
@@ -238,7 +238,7 @@ class Ui_numpadWindow(object):
 "}")
         self.button_ret.setText("")
         icon = QtGui.QIcon()
-        icon.addPixmap(QtGui.QPixmap(gui_path + "icons/bwd_arrow.png"), QtGui.QIcon.Normal, QtGui.QIcon.Off)
+        icon.addPixmap(QtGui.QPixmap("icons/bwd_arrow.png"), QtGui.QIcon.Normal, QtGui.QIcon.Off)
         self.button_ret.setIcon(icon)
         self.button_ret.setIconSize(QtCore.QSize(40, 45))
         self.button_ret.setArrowType(QtCore.Qt.NoArrow)
@@ -278,7 +278,7 @@ class Ui_numpadWindow(object):
 "}")
         self.ok_button.setText("")
         icon1 = QtGui.QIcon()
-        icon1.addPixmap(QtGui.QPixmap(gui_path + "icons/validate_icon.svg"), QtGui.QIcon.Normal, QtGui.QIcon.Off)
+        icon1.addPixmap(QtGui.QPixmap("icons/validate_icon.svg"), QtGui.QIcon.Normal, QtGui.QIcon.Off)
         self.ok_button.setIcon(icon1)
         self.ok_button.setIconSize(QtCore.QSize(45, 45))
         self.ok_button.setObjectName("ok_button")
@@ -314,7 +314,7 @@ class Ui_numpadWindow(object):
 "}")
         self.cancel_button.setText("")
         icon2 = QtGui.QIcon()
-        icon2.addPixmap(QtGui.QPixmap(gui_path + "icons/del_icon.svg"), QtGui.QIcon.Normal, QtGui.QIcon.Off)
+        icon2.addPixmap(QtGui.QPixmap("icons/del_icon.svg"), QtGui.QIcon.Normal, QtGui.QIcon.Off)
         self.cancel_button.setIcon(icon2)
         self.cancel_button.setIconSize(QtCore.QSize(45, 45))
         self.cancel_button.setObjectName("cancel_button")
