@@ -24,7 +24,9 @@
     * modified display of in and out temperature, humidity and pressure.
     * improved the use of pathlib.Path in mainwindow.
     * added a function to correct icon in the connexion window.
-    * icons path has been improved in both forecast windows, in the update window, in the weather warning window.
+    * icons path has been improved in both forecast windows, in the update window, in the weather warning window, in the
+     option window.
+    .
 
   * ADDED:
     * both normal and MSL pressures have been added to the database.
